Added imports and beginning graphs

--- a/project1/Gabriel_Lopez_Project1.ipynb
+++ b/project1/Gabriel_Lopez_Project1.ipynb
@@ -29,11 +29,17 @@
    "source": [
     "import numpy as py\n",
     "import pandas as pd\n",
-    "import matplotlib as mpl\n",
+    "import matplotlib as plt\n",
     "\n",
     "data = pd.read_csv(\"students.csv\")\n",
+    "age =\n",
     "\n",
-    "print(data)"
+    "plt.figure(figsize=(12,5))\n",
+    "\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.hist(age, bins=5)\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
