--- a/project1/Gabriel_Lopez_Project1.ipynb
+++ b/project1/Gabriel_Lopez_Project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,8 +31,17 @@
     "ax1.bar(age, finalTestScores, color='blue', alpha=0.7)\n",
     "ax1.set_title('Age vs Mean Final Test Score')\n",
     "ax1.set_xlabel('Age')\n",
-    "ax1.set_ylabel('Final Test Score')\n",
+    "ax1.set_ylabel('Mean Final Test Score')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Age vs Mean Final Test Score Statistical Analysis\n",
+    "\n",
+    "Upon looking at the graph it seems as though that when the students were closer to the age of 18 they were more likly to get a high score than that of thier peers. The students that were more likly to get a lower score were those closer to ages of 16 and 20.  "
    ]
   },
   {
@@ -60,8 +69,17 @@
     "ax2.bar(studyHours, finalTestScores2, color='blue', alpha=0.7)\n",
     "ax2.set_title('Study Hours vs Mean Final Test Score')\n",
     "ax2.set_xlabel('Study Hours')\n",
-    "ax2.set_ylabel('Final Test Score')\n",
+    "ax2.set_ylabel('Mean Final Test Score')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Study Hours vs Mean Final Test Score Statistical Analysis\n",
+    "\n",
+    "Upon looking at the graph it seems as though as a student studies closer to 6 hours they will be able to maximize their score. Interestingly enough, this lines up with previous ideas that a student should study twice the amount of credit hours. For instance, if a class is 3 credit hours then a student will increase their score with 6 hours of study. Furthermore, it seems as though if a student studies closer to 2 hours or 10 hours then their score will decrease."
    ]
   }
  ],
@@ -81,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
