Change variable names

--- a/project1/Gabriel_Lopez_Project1.ipynb
+++ b/project1/Gabriel_Lopez_Project1.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,9 +74,9 @@
     "studyHourPrev = studyHourGroupsPrevScore[\"Study_Hours\"]\n",
     "prevTestScore = studyHourGroupsPrevScore[\"Previous_Scores\"]\n",
     "\n",
-    "studyHourGroups = students.groupby(\"Study_Hours\")[\"Final_Score\"].mean().reset_index()\n",
-    "studyHours = studyHourGroups[\"Study_Hours\"]\n",
-    "finalTestScoresStudyHours = studyHourGroups[\"Final_Score\"]\n",
+    "studyHourGroupsFinalScore = students.groupby(\"Study_Hours\")[\"Final_Score\"].mean().reset_index()\n",
+    "studyHoursFinal = studyHourGroupsFinalScore[\"Study_Hours\"]\n",
+    "finalTestScoresStudyHours = studyHourGroupsFinalScore[\"Final_Score\"]\n",
     "\n",
     "fig2, ax2 = plt.subplots(figsize=(8,5))\n",
     "ax2.bar(studyHourPrev, prevTestScore, color='blue', alpha=0.7)\n",
@@ -85,7 +85,7 @@
     "ax2.set_ylabel('Mean Previous Test Score')\n",
     "\n",
     "fig3, ax3 = plt.subplots(figsize=(8, 5))\n",
-    "ax3.bar(studyHours, finalTestScoresStudyHours, color='blue', alpha=0.7)\n",
+    "ax3.bar(studyHoursFinal, finalTestScoresStudyHours, color='blue', alpha=0.7)\n",
     "ax3.set_title('Study Hours vs Mean Final Test Score')\n",
     "ax3.set_xlabel('Study Hours')\n",
     "ax3.set_ylabel('Mean Final Test Score')\n",
@@ -95,12 +95,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Study Hours vs Mean Final Test Score Statistical Analysis\n",
+    "# Study Hours Statistical Analysis\n",
     "\n",
-    "Upon looking at the graph it seems as though as a student studies closer to 6 hours they will be able to maximize their score. Interestingly enough, this lines up with previous ideas that a student should study twice the amount of credit hours. For instance, if a class is 3 credit hours then a student will increase their score with 6 hours of study. Furthermore, it seems as though if a student studies closer to 2 hours or 10 hours then their score will decrease."
+    "Upon looking at the Study Hours vs. Mean Final Test Score graph it seems as though as a student studies closer to 6 hours they will be able to maximize their score. This is further supported when comparing it with that of the Previous Test Score graph. The score had visually increased with 6 hours of study. Interestingly enough, this lines up with research in the past that a student should study twice the amount of credit hours. For instance, if a class is 3 credit hours then a student will increase their score with 6 hours of study. Furthermore, it seems as though if a student studies closer to 2 hours or 10 hours then their score will decrease."
    ]
   }
  ],
