Cross calidation with scikit

--- a/housingExample/housing.ipynb
+++ b/housingExample/housing.ipynb
@@ -1052,6 +1052,206 @@
     "housing_num_tr = num_pipeline.fit_transform(housing_num)\n",
     "print(housing_num_tr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'housing_num' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\super\\Documents\\GitHub\\machine-learning-projects\\housingExample\\housing.ipynb Cell 28\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X36sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcompose\u001b[39;00m \u001b[39mimport\u001b[39;00m ColumnTransformer\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X36sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpreprocessing\u001b[39;00m \u001b[39mimport\u001b[39;00m OneHotEncoder\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X36sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m num_attributes \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(housing_num)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X36sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m cat_attributes \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mocean_proximity\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X36sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m full_pipeline \u001b[39m=\u001b[39m ColumnTransformer([\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X36sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     (\u001b[39m\"\u001b[39m\u001b[39mnum\u001b[39m\u001b[39m\"\u001b[39m, num_pipeline, num_attributes),\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X36sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     (\u001b[39m\"\u001b[39m\u001b[39mcat\u001b[39m\u001b[39m\"\u001b[39m, OneHotEncoder(), cat_attributes)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X36sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m ])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'housing_num' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "num_attributes = list(housing_num)\n",
+    "cat_attributes = ['ocean_proximity']\n",
+    "\n",
+    "full_pipeline = ColumnTransformer([\n",
+    "    (\"num\", num_pipeline, num_attributes),\n",
+    "    (\"cat\", OneHotEncoder(), cat_attributes)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_prepared = full_pipeline.fit_transform(housing)\n",
+    "\n",
+    "housing_prepared.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_pipeline2 = ColumnTransformer([\n",
+    "    (\"num\", num_pipeline, num_attributes),\n",
+    "    (\"cat\", OneHotEncoder(), cat_attributes)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_prepared2 = full_pipeline2.fit_transform(housing)\n",
+    "housing_prepared2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'housing_prepared' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\super\\Documents\\GitHub\\machine-learning-projects\\housingExample\\housing.ipynb Cell 32\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X43sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlinear_model\u001b[39;00m \u001b[39mimport\u001b[39;00m LinearRegression\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X43sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m lin_reg \u001b[39m=\u001b[39m LinearRegression()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X43sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m lin_reg\u001b[39m.\u001b[39mfit(housing_prepared, housing_labels)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'housing_prepared' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lin_reg = LinearRegression()\n",
+    "\n",
+    "lin_reg.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'housing' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\super\\Documents\\GitHub\\machine-learning-projects\\housingExample\\housing.ipynb Cell 33\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X44sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m some_data \u001b[39m=\u001b[39m housing\u001b[39m.\u001b[39miloc[:\u001b[39m5\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X44sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m some_lablels \u001b[39m=\u001b[39m housing_labels\u001b[39m.\u001b[39miloc[:\u001b[39m5\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X44sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m some_data_prepared \u001b[39m=\u001b[39m full_pipeline\u001b[39m.\u001b[39mfit_transform(some_data)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'housing' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "some_data = housing.iloc[:5]\n",
+    "some_lablels = housing_labels.iloc[:5]\n",
+    "\n",
+    "some_data_prepared = full_pipeline.fit_transform(some_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some_data_prepared = some_data_prepared[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Predictions:\", lin_reg.predict(some_data_prepared))\n",
+    "print(\"Labels:\", list(some_lablels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'some_data_prepared' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\super\\Documents\\GitHub\\machine-learning-projects\\housingExample\\housing.ipynb Cell 36\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X50sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m mean_squared_error\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X50sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m housing_predictions \u001b[39m=\u001b[39m lin_reg\u001b[39m.\u001b[39mpredict(some_data_prepared)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X50sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m lin_mse \u001b[39m=\u001b[39m mean_squared_error(housing_labels, housing_predictions)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/housingExample/housing.ipynb#X50sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m lin_rmse \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msqrt(lin_mse)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'some_data_prepared' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "housing_predictions = lin_reg.predict(some_data_prepared)\n",
+    "\n",
+    "\n",
+    "lin_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "\n",
+    "lin_rmse = np.sqrt(lin_mse)\n",
+    "\n",
+    "lin_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "\n",
+    "tree_reg.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "housing_predictions = tree_reg.predict(some_data_prepared)\n",
+    "\n",
+    "tree_mse = mean_squared_error(housing_labels[:5], housing_predictions)\n",
+    "\n",
+    "tree_rmse = np.sqrt(tree_mse)\n",
+    "tree_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(lin_reg, housing_prepared, housing_labels, \n",
+    "                         scoring = \"neg_mean_squared_root\", \n",
+    "                         cv=10)\n",
+    "\n",
+    "tree_rmse_scores = np.sqrt(abs(scores))\n",
+    "\n",
+    "tree_rmse_scores"
+   ]
   }
  ],
  "metadata": {
