--- a/housingExample/housing.ipynb
+++ b/housingExample/housing.ipynb
@@ -1252,6 +1252,16 @@
     "\n",
     "tree_rmse_scores"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
