--- a/housingExample/handWritten.ipynb
+++ b/housingExample/handWritten.ipynb
@@ -2,39 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'Unrecognized key \"axis.labelsize\" for group \"axis\" and name \"labelsize\"'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\matplotlib\\__init__.py:745\u001b[0m, in \u001b[0;36mRcParams.__setitem__\u001b[1;34m(self, key, val)\u001b[0m\n\u001b[0;32m    744\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 745\u001b[0m     cval \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mvalidate[key](val)\n\u001b[0;32m    746\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m \u001b[39mas\u001b[39;00m ve:\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'axis.labelsize'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\matplotlib\\__init__.py:1075\u001b[0m, in \u001b[0;36mrc\u001b[1;34m(group, **kwargs)\u001b[0m\n\u001b[0;32m   1074\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 1075\u001b[0m     rcParams[key] \u001b[39m=\u001b[39m v\n\u001b[0;32m   1076\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\matplotlib\\__init__.py:750\u001b[0m, in \u001b[0;36mRcParams.__setitem__\u001b[1;34m(self, key, val)\u001b[0m\n\u001b[0;32m    749\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m--> 750\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\n\u001b[0;32m    751\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m is not a valid rc parameter (see rcParams.keys() for \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    752\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39ma list of valid parameters)\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'axis.labelsize is not a valid rc parameter (see rcParams.keys() for a list of valid parameters)'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\super\\OneDrive\\Desktop\\machine-learning-projects\\housingExample\\handWritten.ipynb Cell 1\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/OneDrive/Desktop/machine-learning-projects/housingExample/handWritten.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mmpl\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/OneDrive/Desktop/machine-learning-projects/housingExample/handWritten.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m plt\u001b[39m.\u001b[39mrc(\u001b[39m'\u001b[39m\u001b[39mfont\u001b[39m\u001b[39m'\u001b[39m, size\u001b[39m=\u001b[39m\u001b[39m14\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/super/OneDrive/Desktop/machine-learning-projects/housingExample/handWritten.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m plt\u001b[39m.\u001b[39;49mrc(\u001b[39m'\u001b[39;49m\u001b[39maxis\u001b[39;49m\u001b[39m'\u001b[39;49m, labelsize\u001b[39m=\u001b[39;49m\u001b[39m14\u001b[39;49m, titlesize\u001b[39m=\u001b[39;49m\u001b[39m14\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/OneDrive/Desktop/machine-learning-projects/housingExample/handWritten.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m plt\u001b[39m.\u001b[39mrc(\u001b[39m'\u001b[39m\u001b[39mlegend\u001b[39m\u001b[39m'\u001b[39m, fontsize\u001b[39m=\u001b[39m\u001b[39m14\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/OneDrive/Desktop/machine-learning-projects/housingExample/handWritten.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m plt\u001b[39m.\u001b[39mrc(\u001b[39m'\u001b[39m\u001b[39mxtick\u001b[39m\u001b[39m'\u001b[39m, labelsize\u001b[39m=\u001b[39m\u001b[39m8\u001b[39m)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\matplotlib\\pyplot.py:670\u001b[0m, in \u001b[0;36mrc\u001b[1;34m(group, **kwargs)\u001b[0m\n\u001b[0;32m    668\u001b[0m \u001b[39m@_copy_docstring_and_deprecators\u001b[39m(matplotlib\u001b[39m.\u001b[39mrc)\n\u001b[0;32m    669\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrc\u001b[39m(group: \u001b[39mstr\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 670\u001b[0m     matplotlib\u001b[39m.\u001b[39mrc(group, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\matplotlib\\__init__.py:1077\u001b[0m, in \u001b[0;36mrc\u001b[1;34m(group, **kwargs)\u001b[0m\n\u001b[0;32m   1075\u001b[0m     rcParams[key] \u001b[39m=\u001b[39m v\n\u001b[0;32m   1076\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 1077\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m((\u001b[39m'\u001b[39m\u001b[39mUnrecognized key \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m for group \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m and \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m   1078\u001b[0m                     \u001b[39m'\u001b[39m\u001b[39mname \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m%\u001b[39m (key, g, name)) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Unrecognized key \"axis.labelsize\" for group \"axis\" and name \"labelsize\"'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
@@ -43,7 +13,7 @@
     "plt.rc('axis', labelsize=14, titlesize=14)\n",
     "plt.rc('legend', fontsize=14)\n",
     "plt.rc('xtick', labelsize=8)\n",
-    "plt.rc('ytick', lablelszie=8)"
+    "plt.rc('ytick', labelsize=8)"
    ]
   },
   {
@@ -117,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,21 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\super\\OneDrive\\Desktop\\machine-learning-projects\\housingExample\\handWritten.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/super/OneDrive/Desktop/machine-learning-projects/housingExample/handWritten.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sgd_clf\u001b[39m.\u001b[39mfit(X_train, y_train_5)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sgd_clf.fit(X_train, y_train_5)"
    ]
@@ -182,7 +140,127 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_train_pred = sgd_clf.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "confusion_matrix(y_train_5, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score\n",
+    "\n",
+    "precision_score(y_train_5, y_train_pred)\n",
+    "recall_score(y_train_5, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "f1_score(y_train_5, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_recall_curve\n",
+    "\n",
+    "precsisions, recalls, thresholds = precision_recall_curve(y_train_5, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_precision_recall_curve(precisions, recalls, thresholds): \n",
+    "    plt.plot(thresholds, precisions[:-1], 'b--',label=\"Precision\")\n",
+    "    plt.plot(thresholds, recalls[:-1], 'g--',label=\"Recall\")\n",
+    "    plt.legend(loc='center right', fontsize=14)\n",
+    "    plt.xlabel(\"Threshold\", fontsize=14)\n",
+    "    plt.grid(True)\n",
+    "    plt.axis(-50000, 50000, 0, 1)\n",
+    "\n",
+    "plot_precision_recall_curve(precisions, recalls, thresholds)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected '(' (1311751603.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    def plot\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected '('\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_curve\n",
+    "\n",
+    "fpr, tpr, thresholds = roc_curve(y_train_5, y_train_pred)\n",
+    "\n",
+    "def plot_roc_curve(fpr, tpr, thresholds):\n",
+    "    plt.plot(fpr, tpr, linewidth = 2)\n",
+    "    plt.plot([0, 1], [0,1], 'k--')\n",
+    "    plt.axis([0, 1, 0, 1])\n",
+    "    plt.xlabel(\"FPR\", fontsize=14)\n",
+    "    plt.ylabel(\"TPR\", fontsize=14)\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "plt.figure(figsize=(10,0))\n",
+    "\n",
+    "plot_roc_curve(fpr, tpr, thresholds)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "roc_auc_score(y_train_pred, y_train_5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "forest_clf = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "y_probas_forest = cross_val_predict(forest_clf, X_train, y_train_5, cv=3)"
+   ]
   }
  ],
  "metadata": {
@@ -201,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
