Small update project

--- a/housingExample/handWritten.ipynb
+++ b/housingExample/handWritten.ipynb
@@ -261,6 +261,15 @@
     "\n",
     "y_probas_forest = cross_val_predict(forest_clf, X_train, y_train_5, cv=3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_scores_forest = y_probas_forest([:, 1])"
+   ]
   }
  ],
  "metadata": {
