--- a/project2/Gabriel_Lopez_Project2.ipynb
+++ b/project2/Gabriel_Lopez_Project2.ipynb
@@ -37,19 +37,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Gabriel\\Desktop\\Fall 2023\\allProjects\\machine-learning-projects\\project2\\Gabriel_Lopez_Project2.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Gabriel/Desktop/Fall%202023/allProjects/machine-learning-projects/project2/Gabriel_Lopez_Project2.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gabriel/Desktop/Fall%202023/allProjects/machine-learning-projects/project2/Gabriel_Lopez_Project2.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gabriel/Desktop/Fall%202023/allProjects/machine-learning-projects/project2/Gabriel_Lopez_Project2.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -63,7 +51,105 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
+    "split = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=50)\n",
+    "\n",
+    "for train_index, test_index in split.split(sales, sales[\"\"]):\n",
+    "    strat_train_set = sales.iloc[train_index]\n",
+    "    strat_test_set = sales.iloc[test_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "imputer = SimpleImputer(strategy=\"medium\")\n",
+    "\n",
+    "numeric_std_pipline = Pipeline([('imputer', SimpleImputer(strategy='median')),\n",
+    "                                  ('stdscaler', StandardScaler())])\n",
+    "\n",
+    "numeric_minmax_pipeline = Pipeline([('imputer', SimpleImputer(strategy='median')),\n",
+    "                                    ('minmaxscaler', MinMaxScaler())])\n",
+    "\n",
+    "cat_pipeline = Pipeline([('onehot', OneHotEncoder())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor as RFR\n",
+    "\n",
+    "full_transformer = ColumnTransformer([('numeric_stdpreprocessing', numeric_std_pipeline, num_std_attribs),\n",
+    "                                ('numeric_minmaxpreprocessing', numeric_minmax_pipeline, num_maxmin_attribs),\n",
+    "                                 ('cat_preprocessing', cat_pipeline, cat_attribs)\n",
+    "                                ])\n",
+    "\n",
+    "p1_full_pipeline = Pipeline([('all_column_transformation', full_transformer),\n",
+    "                        ('linear_regression', LinearRegression())\n",
+    "                      ])\n",
+    "\n",
+    "\n",
+    "\n",
+    "p2_full_pipeline = Pipeline([('all_column_transformation', full_transformer),\n",
+    "               (\"RFR_model\", RFR())\n",
+    "               ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "def fit_and_print(p, train_set, train_labels, test_set, test_labels):\n",
+    "  p.fit(train_set, train_labels)\n",
+    "  train_preds = p.predict(train_set)\n",
+    "  test_preds = p.predict(test_set)\n",
+    "  print(\"Training Error: \" + str(mean_absolute_error(train_preds, train_labels)))\n",
+    "  print(\"Test Error: \" + str(mean_absolute_error(test_preds, test_labels)))\n",
+    "  print(\"R2 score: \" + str(r2_score(test_preds, test_labels)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fit_and_print(p1_full_pipeline, train, train_labels, test, test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fit_and_print(p2_full_pipeline, train, train_labels, test, test_labels)"
+   ]
   }
  ],
  "metadata": {
