--- a/project2/Gabriel_Lopez_Project2.ipynb
+++ b/project2/Gabriel_Lopez_Project2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,112 +43,89 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "sales = pd.read_csv(\"trainSales.csv\")"
+    "salesTrain = pd.read_csv(\"trainSales.csv\")\n",
+    "#salesTest = pd.read_csv(\"testSales.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "X = salesTrain.drop(columns=['WeeklySales'])\n",
+    "y = salesTrain['WeeklySales']\n",
     "\n",
-    "split = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=50)\n",
-    "\n",
-    "for train_index, test_index in split.split(sales, sales[\"\"]):\n",
-    "    strat_train_set = sales.iloc[train_index]\n",
-    "    strat_test_set = sales.iloc[test_index]"
+    "cat_feat = ['Store', 'Holiday']\n",
+    "num_feat = ['Week', 'Temperature', 'CPI', 'FuelPrice', 'Unemployment']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "\n",
-    "imputer = SimpleImputer(strategy=\"medium\")\n",
-    "\n",
-    "numeric_std_pipline = Pipeline([('imputer', SimpleImputer(strategy='median')),\n",
-    "                                  ('stdscaler', StandardScaler())])\n",
-    "\n",
-    "numeric_minmax_pipeline = Pipeline([('imputer', SimpleImputer(strategy='median')),\n",
-    "                                    ('minmaxscaler', MinMaxScaler())])\n",
-    "\n",
-    "cat_pipeline = Pipeline([('onehot', OneHotEncoder())])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "cat_trans = Pipeline([\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+    "                        ])\n",
+    "\n",
+    "num_trans = Pipeline([\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
+    "prepross = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', num_trans, num_feat),\n",
+    "        ('cat', cat_trans, cat_feat)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.ensemble import RandomForestRegressor as RFR\n",
     "\n",
-    "full_transformer = ColumnTransformer([('numeric_stdpreprocessing', numeric_std_pipeline, num_std_attribs),\n",
-    "                                ('numeric_minmaxpreprocessing', numeric_minmax_pipeline, num_maxmin_attribs),\n",
-    "                                 ('cat_preprocessing', cat_pipeline, cat_attribs)\n",
-    "                                ])\n",
-    "\n",
-    "p1_full_pipeline = Pipeline([('all_column_transformation', full_transformer),\n",
-    "                        ('linear_regression', LinearRegression())\n",
-    "                      ])\n",
-    "\n",
-    "\n",
-    "\n",
-    "p2_full_pipeline = Pipeline([('all_column_transformation', full_transformer),\n",
-    "               (\"RFR_model\", RFR())\n",
-    "               ])"
+    "pipeline = Pipeline([\n",
+    "    ('preprocessor', prepross),\n",
+    "    ('model', LinearRegression())\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28999361826.43181\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.metrics import mean_absolute_error\n",
-    "from sklearn.metrics import r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "def fit_and_print(p, train_set, train_labels, test_set, test_labels):\n",
-    "  p.fit(train_set, train_labels)\n",
-    "  train_preds = p.predict(train_set)\n",
-    "  test_preds = p.predict(test_set)\n",
-    "  print(\"Training Error: \" + str(mean_absolute_error(train_preds, train_labels)))\n",
-    "  print(\"Test Error: \" + str(mean_absolute_error(test_preds, test_labels)))\n",
-    "  print(\"R2 score: \" + str(r2_score(test_preds, test_labels)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fit_and_print(p1_full_pipeline, train, train_labels, test, test_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fit_and_print(p2_full_pipeline, train, train_labels, test, test_labels)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "pipeline.fit(X_train,y_train)\n",
+    "\n",
+    "y_pred = pipeline.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred) \n",
+    "\n",
+    "print(mse)"
    ]
   }
  ],
