--- a/inClassProjectts/normalEquation/normalEquation.ipynb
+++ b/inClassProjectts/normalEquation/normalEquation.ipynb
@@ -79,9 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Field elements must be 2- or 3-tuples, got '2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\super\\Documents\\GitHub\\machine-learning-projects\\inClassProjectts\\normalEquation\\normalEquation.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/inClassProjectts/normalEquation/normalEquation.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m X_new \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49marray([\u001b[39m0\u001b[39;49m], [\u001b[39m2\u001b[39;49m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/inClassProjectts/normalEquation/normalEquation.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m X_new_b \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mc_[np\u001b[39m.\u001b[39mones((\u001b[39m2\u001b[39m,\u001b[39m1\u001b[39m)), X_new]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/inClassProjectts/normalEquation/normalEquation.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m X_new_b\u001b[39m.\u001b[39mdot(theta)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Field elements must be 2- or 3-tuples, got '2'"
+     ]
+    }
+   ],
    "source": [
     "X_new = np.array([0], [2])\n",
     "X_new_b = np.c_[np.ones((2,1)), X_new]\n",
