Added a way to get rid of outliers

--- a/project2/Gabriel_Lopez_Project2.ipynb
+++ b/project2/Gabriel_Lopez_Project2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define columns where you want to remove outliers (e.g., 'WeeklySales')\n",
+    "columns_to_check = ['WeeklySales']\n",
+    "\n",
+    "# Function to remove outliers using IQR method\n",
+    "def remove_outliers_iqr(df, columns):\n",
+    "    for col in columns:\n",
+    "        q1 = df[col].quantile(0.25)\n",
+    "        q3 = df[col].quantile(0.75)\n",
+    "        iqr = q3 - q1\n",
+    "        lower_bound = q1 - 1.5 * iqr\n",
+    "        upper_bound = q3 + 1.5 * iqr\n",
+    "        df = df[(df[col] >= lower_bound) & (df[col] <= upper_bound)]\n",
+    "    return df\n",
+    "\n",
+    "# Remove outliers from your training data\n",
+    "salesTrain_cleaned = remove_outliers_iqr(salesTrain, columns_to_check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +148,19 @@
       "0.030177798153155244\n",
       "281638975392.58484\n",
       "388661.874503212\n",
-      "0.1360574772328158\n"
+      "0.1360574772328158\n",
+      "2629    1650604.60\n",
+      "99      1953416.06\n",
+      "2473    1357036.10\n",
+      "1351     329139.73\n",
+      "3548    1077018.27\n",
+      "           ...    \n",
+      "4426     713173.95\n",
+      "466     1539930.50\n",
+      "3092    1107366.06\n",
+      "3772     279246.33\n",
+      "860      270373.05\n",
+      "Name: WeeklySales, Length: 4118, dtype: float64\n"
      ]
     }
    ],
@@ -155,12 +191,14 @@
     "\n",
     "print(mse_rand_forest)\n",
     "print(mae_rand_forest)\n",
-    "print(r2_rand_forest)"
+    "print(r2_rand_forest)\n",
+    "\n",
+    "print(y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
