--- a/project2/Gabriel_Lopez_Project2.ipynb
+++ b/project2/Gabriel_Lopez_Project2.ipynb
@@ -54,7 +54,7 @@
     "\"\"\"Code above gave an attribute error after running second cell for a 'NoneType' attribute\"\"\"\n",
     "\n",
     "\"\"\"\n",
-    "Code within this block were a test of different combinations of the paramters\n",
+    "Code within this block were a test of different combinations of the parameters\n",
     "\n",
     "#salesTrain = salesTrain.reset_index(drop=True)\n",
     "#salesTest = salesTest.reset_index(drop=True)\n",
