--- a/project2/Gabriel_Lopez_Project2.ipynb
+++ b/project2/Gabriel_Lopez_Project2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "'Looking at stackoverflow, found that inplace renames data in place of the data that exists and thus returns nothing\\nLink: https://stackoverflow.com/questions/43893457/understanding-inplace-true-in-pandas\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,25 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "This 'Pipeline' has no attribute 'fit_transform'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\super\\Documents\\GitHub\\machine-learning-projects\\project2\\Gabriel_Lopez_Project2.ipynb Cell 6\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/project2/Gabriel_Lopez_Project2.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m mean_squared_error, r2_score, mean_absolute_error\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/project2/Gabriel_Lopez_Project2.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#X_train, X_test, y_train, y_test = train_test_split(X_train, y_train, test_size=0.2, random_state=42)\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/project2/Gabriel_Lopez_Project2.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m pipeline\u001b[39m.\u001b[39;49mfit_transform(X_train,y_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/project2/Gabriel_Lopez_Project2.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m pipeline_random_forest\u001b[39m.\u001b[39mfit_transform(X_train, y_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/super/Documents/GitHub/machine-learning-projects/project2/Gabriel_Lopez_Project2.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m y_pred \u001b[39m=\u001b[39m pipeline\u001b[39m.\u001b[39mpredict(X_test)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\utils\\_available_if.py:32\u001b[0m, in \u001b[0;36m_AvailableIfDescriptor.__get__\u001b[1;34m(self, obj, owner)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[39mif\u001b[39;00m obj \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     29\u001b[0m     \u001b[39m# delegate only on instances, not the classes.\u001b[39;00m\n\u001b[0;32m     30\u001b[0m     \u001b[39m# this is to allow access to the docstrings.\u001b[39;00m\n\u001b[0;32m     31\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcheck(obj):\n\u001b[1;32m---> 32\u001b[0m         \u001b[39mraise\u001b[39;00m attr_err\n\u001b[0;32m     33\u001b[0m     out \u001b[39m=\u001b[39m MethodType(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfn, obj)\n\u001b[0;32m     35\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     36\u001b[0m     \u001b[39m# This makes it possible to use the decorated method as an unbound method,\u001b[39;00m\n\u001b[0;32m     37\u001b[0m     \u001b[39m# for instance when monkeypatching.\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: This 'Pipeline' has no attribute 'fit_transform'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error\n",
+    "\n",
     "\n",
     "#X_train, X_test, y_train, y_test = train_test_split(X_train, y_train, test_size=0.2, random_state=42)\n",
     "\n",
@@ -185,6 +173,32 @@
     "mae_rand_forest = mean_absolute_error(y_test,y_pred_rand_forest)\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "#print(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "299130109192.067\n",
+      "469813.6889520801\n",
+      "0.02482061947596803\n",
+      "\n",
+      "\n",
+      "267214659180.43027\n",
+      "368674.4820150972\n",
+      "0.12886661088604645\n"
+     ]
+    }
+   ],
+   "source": [
     "print(mse)\n",
     "print(mae)\n",
     "print(r2)\n",
@@ -193,9 +207,64 @@
     "\n",
     "print(mse_rand_forest)\n",
     "print(mae_rand_forest)\n",
-    "print(r2_rand_forest)\n",
+    "print(r2_rand_forest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'model__max_features': 8, 'model__n_estimators': 30}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "#print(y_train)"
+    "param_grid = [\n",
+    "    {'model__n_estimators': [3, 10, 30], 'model__max_features': [2, 4, 6, 8]},\n",
+    "    {'model__bootstrap': [False], 'model__n_estimators': [3, 10], 'model__max_features': [2, 3, 4]},\n",
+    "  ]\n",
+    "\n",
+    "grid_search = GridSearchCV(pipeline_random_forest, param_grid, cv=5)\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "271711521090.3753\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_rand_forest_pipline = Pipeline([\n",
+    "    ('preprocessor', prepross),\n",
+    "    ('model', RandomForestRegressor(max_features=8, n_estimators=30))\n",
+    "])\n",
+    "\n",
+    "new_rand_forest_pipline.fit(X_train, y_train)\n",
+    "y_pred_new_rand_forest = new_rand_forest_pipline.predict(X_test)\n",
+    "\n",
+    "new_rand_forest_mse = mean_squared_error(y_test, y_pred_new_rand_forest)\n",
+    "\n",
+    "print(new_rand_forest_mse)"
    ]
   },
   {
@@ -273,7 +342,7 @@
        "'\\nimport matplotlib.pyplot as plt\\n\\nfig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6))\\n\\nax1.scatter(range(len(y_test)), y_test, color=\\'blue\\', label=\\'Actual\\')\\nax1.set_xlabel(\"Data Point\")\\nax1.set_ylabel(\"Actual Weekly Sales\")\\nax1.set_title(\"Actual Weekly Sales\")\\n\\nax2.scatter(range(len(y_pred)), y_pred, color=\\'red\\', label=\\'Predicted\\')\\nax2.set_xlabel(\"Data Point\")\\nax2.set_ylabel(\"Predicted Weekly Sales\")\\nax2.set_title(\"Predicted Weekly Sales\")\\n\\nax1.legend()\\nax2.legend()\\n\\nplt.tight_layout()\\nplt.show()\\n'"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
