Added more comments

--- a/project2/Gabriel_Lopez_Project2.ipynb
+++ b/project2/Gabriel_Lopez_Project2.ipynb
@@ -253,6 +253,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "#Create grid and use grid in the grid search method to find the best parameters\n",
+    "#Code for grid search used code from \"Project-StepByStep\" as template\n",
     "param_grid = [\n",
     "    {'model__n_estimators': [3, 10, 30], 'model__max_features': [2, 4, 6, 8]},\n",
     "    {'model__bootstrap': [False], 'model__n_estimators': [3, 10], 'model__max_features': [2, 3, 4]},\n",
