Added logistic regression

--- a/project3/Gabriel_Lopez_Project3.ipynb
+++ b/project3/Gabriel_Lopez_Project3.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
     "X = patients.drop(columns=['Outcome'])\n",
     "y = patients['Outcome']\n",
     "\n",
-    "X_train, y_train, X_test, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "num_feat = ['Pregnancies', 'Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', \n",
     "            'DiabetesPedigreeFunction', 'Age', 'Outcome']"
@@ -102,12 +102,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression  0.8133333333333334\n"
+     ]
+    }
+   ],
    "source": [
+    "#A imputer was not used here due to the data set not having any null values\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "#A imputer was not used here due to the data set not having any null values"
+    "log_clf = LogisticRegression(random_state=42, solver='lbfgs')\n",
+    "\n",
+    "#Site this\n",
+    "preprocess = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('classifier', log_clf)\n",
+    "])\n",
+    "\n",
+    "preprocess.fit(X_train, y_train)\n",
+    "predictions = preprocess.predict(X_test)\n",
+    "print(\"Logistic Regression \", accuracy_score(predictions, y_test))"
    ]
   }
  ],
