--- a/project3/Gabriel_Lopez_Project3.ipynb
+++ b/project3/Gabriel_Lopez_Project3.ipynb
@@ -46,6 +46,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check all metrics:\n",
+    "\n",
+    "- F1 score\n",
+    "- ROC curve\n",
+    "- Precision score\n",
+    "- Accuracy score\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
