Started project projection

--- a/project3/Gabriel_Lopez_Project3.ipynb
+++ b/project3/Gabriel_Lopez_Project3.ipynb
@@ -54,7 +54,9 @@
     "- F1 score\n",
     "- ROC curve\n",
     "- Precision score\n",
-    "- Accuracy score\n"
+    "- Accuracy score\n",
+    "\n",
+    "Use stratified sampling"
    ]
   },
   {
