Updated recommendations and added comments

--- a/project4/Gabriel_Lopez_Project4.ipynb
+++ b/project4/Gabriel_Lopez_Project4.ipynb
@@ -45,6 +45,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
+    "#Use data and find missing values\n",
     "customers = pd.read_csv(\"customers.csv\")\n",
     "\n",
     "missingValues = customers.isna()\n",
@@ -72,8 +73,8 @@
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
-    "#sss = StratifiedShuffleSplit(n_splits=5, test_size=0.3, random_state=42)\n",
-    "#skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "#Split the data and assign features\n",
     "\n",
     "X = customers.drop(columns=['Spending Score (1-100)'])\n",
     "y = customers['Spending Score (1-100)']\n",
@@ -99,7 +100,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\super\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\cluster\\_kmeans.py:1412: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "C:\\Users\\Gabriel\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\cluster\\_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  super()._check_params_vs_input(X, default_n_init=10)\n"
      ]
     }
@@ -123,16 +124,10 @@
     "    ('model', KMeans(n_clusters=5, random_state=42))\n",
     "])\n",
     "\n",
-    "# Fit the pipeline and get cluster labels\n",
+    "# Fit the pipeline\n",
     "y_pred = pipeline.fit_predict(X_train)\n",
     "\n",
-    "# Get the inertia (within-cluster sum of squares)\n",
-    "#inertia = pipeline.named_steps['model'].inertia_\n",
-    "#print(f\"Inertia: {inertia}\")\n",
-    "\n",
-    "# Calculate silhouette score\n",
-    "#sil_score = silhouette_score(X, y_pred)\n",
-    "#print(f\"Silhouette Score: {sil_score}\")\n"
+    "\n"
    ]
   },
   {
@@ -144,14 +139,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inertia: 58092.85693679771\n"
+      "Inertia: 58092.8569367977\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\super\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\cluster\\_kmeans.py:1412: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "C:\\Users\\Gabriel\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\cluster\\_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  super()._check_params_vs_input(X, default_n_init=10)\n"
      ]
     }
@@ -163,22 +158,24 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
+    "#Transform data\n",
     "preprocess = ColumnTransformer([\n",
     "   ('num_feat', 'passthrough' ,num_feat),\n",
     "   ('cat_feat', OneHotEncoder(), cat_feat) \n",
     "])\n",
     "\n",
+    "#Create pipeline for kmeans\n",
     "pipeline = Pipeline([\n",
     "    ('preprocessor', preprocess),\n",
     "    ('model', KMeans(n_clusters=5, random_state=42))\n",
     "])\n",
     "\n",
+    "#Fit and predict the pipline\n",
     "pipeline.fit(X_train, y_train)\n",
     "y_pred = pipeline.predict(X_test)\n",
     "\n",
     "inertia = pipeline.named_steps['model'].inertia_\n",
     "\n",
-    "#sil_score = silhouette_score(preprocess.transform(X_test), y_pred)\n",
     "\n",
     "print(\"Inertia: \" + str(inertia))"
    ]
@@ -225,6 +222,7 @@
    "source": [
     "from sklearn.cluster import DBSCAN\n",
     "\n",
+    "#Create dbscan pipline\n",
     "pip_dbscan = Pipeline([\n",
     "    ('preprocessor', preprocess),\n",
     "    ('model', DBSCAN(eps=0.05, min_samples=5))\n",
@@ -251,6 +249,7 @@
     }
    ],
    "source": [
+    "#Print out labels for dbscan\n",
     "print(str(pip_dbscan.named_steps['model'].labels_[:10]) + \"\\n\")\n",
     "\n",
     "print(str(pip_dbscan.named_steps['model'].components_) + \"\\n\")\n",
@@ -276,14 +275,17 @@
    "source": [
     "from sklearn.mixture import GaussianMixture\n",
     "\n",
+    "#Use gaussian mixture pipline\n",
     "pip_gaussian_mixture = Pipeline([\n",
     "    ('preprocessor', preprocess),\n",
     "    ('model', GaussianMixture(n_components=3, random_state=42))\n",
     "])\n",
     "\n",
+    "#Fit and predict data\n",
     "pip_gaussian_mixture.fit(X_train, y_train)\n",
     "y_pred = pip_gaussian_mixture.predict(X_test)\n",
     "\n",
+    "#Get and display silhouette score\n",
     "sil_score = silhouette_score(preprocess.transform(X_test), y_pred)\n",
     "\n",
     "print(\"Silhouette Score: \" + str(sil_score))"
@@ -295,8 +297,9 @@
    "source": [
     "### Recommendations\n",
     "\n",
-    "When looking upon the data it seems as though that the Kmeans model did a slightly better job at finding the clusters\n",
-    "than the DBscan and Gaussian mixture. Furthermore, for the data, the use of Kmeans did not seem to be appropriate for the data given. "
+    "When looking upon the data it seems as though that the Kmeans model did a slightly better job at finding the clusters than the DBscan and Gaussian mixture. This is representative of \n",
+    "of internia score for the Kmeans being about 58092 and Gaussian mixture silhouette score 0.19.\n",
+    "Furthermore, for the data, the use of Kmeans did not seem to be appropriate for the data given. "
    ]
   }
  ],
